# quanto

./: .betterleaks.toml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  commitlint.config.js  lefthook.yml  pyproject.toml
.claude/agents/: quanto.md
.claude/skills/quanto-extractos/: categorias.json
.claude/skills/quanto-extractos/scripts/: analizar_periodo.py  categorizar_movimientos.py  consolidar_mes.py  generar_dashboard.py  matcher_cross_extracto.py  parser_davibank_tc.py  parser_davivienda_ahorros.py  parser_davivienda_tc.py  parser_nequi.py
